dehash-me/dehash-me-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dehash-me
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: dehash-me
  template:
    metadata:
      labels:
        app: dehash-me
    spec:
      containers:
      - image: ghcr.io/dysnomia-studio/dehash-me:main
        name: dehash-me
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 250m
            memory: 250Mi
          limits:
            cpu: 1000m
            memory: 500Mi
      imagePullSecrets:
      - name: github
