dehash-me/dehash-me-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dehash-me-ingressroute

spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`dehash.me`) || Host(`www.dehash.me`)
    kind: Rule
    services:
    - name: dehash-me-svc
      port: 80
    middlewares:
      - name: security
  tls:
    certResolver: le
